fix: overflow scroll on weapon list

--- a/style.css
+++ b/style.css
@@ -68,6 +68,8 @@ body {
     border-right: var(--border);
 
     background: var(--color-surface-dim);
+
+    overflow: hidden;
 }
 
 #sidebar-header {
@@ -77,7 +79,6 @@ body {
 
     height: 5rem;
 
-    margin-bottom: 1rem;
     padding-left: 1rem;
 }
 
@@ -92,9 +93,15 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 1rem;
+
+    max-height: calc(100vh - 5rem);
+
+    overflow: scroll;
 }
 
 .selectable-weapon {
+    flex-shrink: 0;
+
     position: relative;
 
     width: 20rem;
@@ -122,6 +129,9 @@ body {
 
     content: '';
 }
+
+.selectable-weapon:first-child { margin-top: 1rem; }
+.selectable-weapon:last-child { margin-bottom: 1rem; }
 
 .selectable-weapon span.selectable-weapon-name {
     position: absolute;
